feat: configure Jev semantic analysis
